syntax = "proto3";

option go_package = "./proto";

service LearningPlanTrackerService {

    rpc AddCourse(AddCourseRequest) returns (AddCourseResponse);

    rpc AddTopic(AddTopicRequest) returns (AddTopicResponse);

    rpc AddExercise(AddExerciseRequest) returns (AddExerciseResponse);

    rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse);

    rpc AddUser(AddUserRequest) returns (AddUserResponse);

    rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);

    rpc ListUsersByRole(ListUsersByRoleRequest) returns (ListUsersByRoleResponse);

    rpc CreateAssignment(CreateAssignmentRequest) returns (CreateAssignmentResponse);

    rpc ListCurrentAssignments(ListCurrentAssignmentsRequest) returns (ListCurrentAssignmentsResponse);

    rpc ListAssignedCourses(ListAssignedCoursesRequest) returns (ListAssignedCoursesResponse);

    rpc GetAssignedCourseDetailsByCourseId(GetAssignedCourseDetailsByCourseIdRequest) returns (GetAssignedCourseDetailsByCourseIdResponse);
    
    rpc GetAssignedCourseAndMentorDetails(GetAssignedCourseAndMentorDetailsRequest) returns (GetAssignedCourseAndMentorDetailsResponse);

    rpc SubmitExercise(SubmitExerciseRequest) returns (SubmitExerciseResponse);

    rpc DeleteExercise(DeleteExerciseRequest) returns (DeleteExerciseResponse);

    rpc GetSubmittedExercise(GetSubmittedExerciseRequest) returns (GetSubmittedExerciseResponse);

    rpc GetProgress(GetProgressRequest) returns (GetProgressResponse);

    rpc ListAssignedMenteesAndCourses(ListAssignedMenteesAndCoursesRequest) returns (ListAssignedMenteesAndCoursesResponse);

    rpc ListSubmittedExercisesByMentee(ListSubmittedExercisesByMenteeRequest) returns (ListSubmittedExercisesByMenteeResponse);
}

message CourseDetails {
    int32 id = 1;
    string name = 2;
    string caption = 3;
	string logo = 4;
	int32 time = 5;
    repeated TopicDetails TD = 6;
}

message TopicDetails {
    int32 id = 1;
    string name = 2;
    string resource = 3;
    int32 course_id = 4;
    repeated ExerciseDetails ED = 5;
}

message ExerciseDetails {
    int32 id = 1;
    string question = 2;
    int32 topic_id = 3;
}

enum Role {
    Admin = 0;
    Mentor = 1;
    Mentee = 2;
} 
    
message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
}

message CourseAssignment {
    int32 id = 1;
    int32 mentor_id = 2;
    int32 mentee_id = 3;
    int32 course_id = 4;
}
message CurrentAssignmets {
    string mentor_name = 1;
    string mentee_name = 2;
    string course_name = 3;
}

message MenteeAndCourseDetails {
    string mentee_email = 1;
    int32 mentee_id = 2;
    int32 course_id = 3;
}

message SubmitExerciseDetails {
    int32 id = 1;
    string mentee_email = 2;
    int32 course_id = 3;
    int32 exercise_id = 4;
    string file_name = 5;
    string file = 6;
}

message SubmittedExercisesDetails {
    int32 exercise_id = 1;
    string file_name = 2;
    string file = 3;
    string question = 4;
}

message AddCourseRequest {
	CourseDetails cd = 1;
}

message AddCourseResponse {
    CourseDetails cd = 1;
}

message AddTopicRequest {
    TopicDetails td = 1;
}

message AddTopicResponse {
    TopicDetails td = 1;
}

message AddExerciseRequest {
    ExerciseDetails ed = 1;
}

message AddExerciseResponse {
    ExerciseDetails ed = 1;
}

message ListCoursesRequest {

}

message ListCoursesResponse {
}

message AddUserRequest{
    User user = 1;
}

message AddUserResponse{
    User user = 1;
}

message GetUserDetailsRequest {
    int32 id =1;
}

message GetUserDetailsResponse{
    User user = 1;
}

message ListUsersByRoleRequest {
    Role role = 1;
}

message ListUsersByRoleResponse {
    repeated string name = 1;
}

message CreateAssignmentRequest {
    CourseAssignment ca = 1;
}

message CreateAssignmentResponse {
    CourseAssignment ca = 1;
}

message ListCurrentAssignmentsRequest {

}

message ListCurrentAssignmentsResponse {
    repeated CurrentAssignmets ca = 1;
}

message ListAssignedCoursesRequest {
    string email = 1;
}

message ListAssignedCoursesResponse {
    repeated int32 course_id = 1;
}

message GetAssignedCourseDetailsByCourseIdRequest {
    int32 course_id = 1;
}

message GetAssignedCourseDetailsByCourseIdResponse {
    CourseDetails cd = 1;
}

message GetAssignedCourseAndMentorDetailsRequest {
    int32 course_id = 1;
    string mentee_email = 2;
}

message GetAssignedCourseAndMentorDetailsResponse {
    CourseDetails cd = 1;
    string mentor_email = 2;
}

message SubmitExerciseRequest {
    SubmitExerciseDetails sed = 1;
}

message SubmitExerciseResponse {
    int32 id = 1;
}

message DeleteExerciseRequest {
    string mentee_email = 1;
    int32 exercise_id = 2;
}

message DeleteExerciseResponse {
    string message = 1;
}

message GetSubmittedExerciseRequest {
    string mentee_email = 1;
    int32 exercise_id = 2;
}

message GetSubmittedExerciseResponse {
    string file_name = 1;
    string file = 2;
}

message GetProgressRequest {
    string mentee_email = 1;
    int32 course_id = 2;
}

message GetProgressResponse {
    int32 progress = 1;
}

message ListAssignedMenteesAndCoursesRequest {
    string mentor_email = 1;
}

message ListAssignedMenteesAndCoursesResponse {
    repeated MenteeAndCourseDetails macd = 1;
}

message ListSubmittedExercisesByMenteeRequest {
    int32 mentee_id = 1;
    int32 course_id = 2;
}

message ListSubmittedExercisesByMenteeResponse {
    repeated SubmittedExercisesDetails SED = 1;
}